parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> print_statement
Rule 5     statement -> assign_statement
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> for_statement
Rule 9     statement -> function_definition
Rule 10    statement -> return_statement
Rule 11    statement -> input_statement
Rule 12    statement -> expression SEMICOLON
Rule 13    input_statement -> INPUT LPAREN lvalue RPAREN SEMICOLON
Rule 14    print_statement -> PRINT LPAREN print_arguments RPAREN SEMICOLON
Rule 15    print_arguments -> print_arguments COMMA expression
Rule 16    print_arguments -> expression
Rule 17    assign_statement -> lvalue EQUALS expression SEMICOLON
Rule 18    lvalue -> ID
Rule 19    lvalue -> expression LBRACKET expression RBRACKET
Rule 20    argument_list -> argument_list COMMA expression
Rule 21    argument_list -> expression
Rule 22    if_statement -> IF LPAREN expression RPAREN block
Rule 23    if_statement -> IF LPAREN expression RPAREN block ELSE block
Rule 24    while_statement -> WHILE LPAREN expression RPAREN block
Rule 25    for_statement -> FOR LPAREN assign_statement expression SEMICOLON assign_statement RPAREN block
Rule 26    function_definition -> FUNC ID LPAREN parameters RPAREN block
Rule 27    expression -> ID LPAREN argument_list RPAREN
Rule 28    parameters -> parameters COMMA ID
Rule 29    parameters -> ID
Rule 30    parameters -> empty
Rule 31    block -> LKEY statement_list RKEY
Rule 32    return_statement -> RETURN expression SEMICOLON
Rule 33    expression -> expression DOT INSERT LPAREN expression RPAREN
Rule 34    expression -> expression DOT EXPLODE LPAREN expression RPAREN
Rule 35    expression -> expression DOT SIZE LPAREN RPAREN
Rule 36    expression -> expression DOT GET LPAREN expression RPAREN
Rule 37    expression -> expression PLUS expression
Rule 38    expression -> expression MINUS expression
Rule 39    expression -> expression MULT expression
Rule 40    expression -> expression DIVIDE expression
Rule 41    expression -> expression MODULE expression
Rule 42    expression -> expression LESS expression
Rule 43    expression -> expression GREATER expression
Rule 44    expression -> expression LESSEQ expression
Rule 45    expression -> expression GREATEREQ expression
Rule 46    expression -> expression EQ expression
Rule 47    expression -> expression NEQ expression
Rule 48    expression -> expression AND expression
Rule 49    expression -> expression OR expression
Rule 50    expression -> NOT expression
Rule 51    expression -> MINUS expression
Rule 52    expression -> LPAREN expression RPAREN
Rule 53    expression -> NUMBER
Rule 54    expression -> STRING
Rule 55    expression -> BOOLEAN
Rule 56    expression -> ID
Rule 57    expression -> LBRACKET list_elements RBRACKET
Rule 58    list_elements -> expression
Rule 59    list_elements -> list_elements COMMA expression
Rule 60    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
BOOLEAN              : 55
COMMA                : 15 20 28 59
DIVIDE               : 40
DOT                  : 33 34 35 36
ELSE                 : 23
EQ                   : 46
EQUALS               : 17
EXPLODE              : 34
FOR                  : 25
FUNC                 : 26
GET                  : 36
GREATER              : 43
GREATEREQ            : 45
ID                   : 18 26 27 28 29 56
IF                   : 22 23
INPUT                : 13
INSERT               : 33
LBRACKET             : 19 57
LESS                 : 42
LESSEQ               : 44
LKEY                 : 31
LPAREN               : 13 14 22 23 24 25 26 27 33 34 35 36 52
MINUS                : 38 51
MODULE               : 41
MULT                 : 39
NEQ                  : 47
NOT                  : 50
NUMBER               : 53
OR                   : 49
PLUS                 : 37
PRINT                : 14
RBRACKET             : 19 57
RETURN               : 32
RKEY                 : 31
RPAREN               : 13 14 22 23 24 25 26 27 33 34 35 36 52
SEMICOLON            : 12 13 14 17 25 32
SIZE                 : 35
STRING               : 54
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

argument_list        : 20 27
assign_statement     : 5 25 25
block                : 22 23 23 24 25 26
empty                : 30
expression           : 12 15 16 17 19 19 20 21 22 23 24 25 32 33 33 34 34 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 52 58 59
for_statement        : 8
function_definition  : 9
if_statement         : 6
input_statement      : 11
list_elements        : 57 59
lvalue               : 13 17
parameters           : 26 28
print_arguments      : 14 15
print_statement      : 4
program              : 0
return_statement     : 10
statement            : 2 3
statement_list       : 1 2 31
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . print_statement
    (5) statement -> . assign_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . function_definition
    (10) statement -> . return_statement
    (11) statement -> . input_statement
    (12) statement -> . expression SEMICOLON
    (14) print_statement -> . PRINT LPAREN print_arguments RPAREN SEMICOLON
    (17) assign_statement -> . lvalue EQUALS expression SEMICOLON
    (22) if_statement -> . IF LPAREN expression RPAREN block
    (23) if_statement -> . IF LPAREN expression RPAREN block ELSE block
    (24) while_statement -> . WHILE LPAREN expression RPAREN block
    (25) for_statement -> . FOR LPAREN assign_statement expression SEMICOLON assign_statement RPAREN block
    (26) function_definition -> . FUNC ID LPAREN parameters RPAREN block
    (32) return_statement -> . RETURN expression SEMICOLON
    (13) input_statement -> . INPUT LPAREN lvalue RPAREN SEMICOLON
    (27) expression -> . ID LPAREN argument_list RPAREN
    (33) expression -> . expression DOT INSERT LPAREN expression RPAREN
    (34) expression -> . expression DOT EXPLODE LPAREN expression RPAREN
    (35) expression -> . expression DOT SIZE LPAREN RPAREN
    (36) expression -> . expression DOT GET LPAREN expression RPAREN
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULT expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MODULE expression
    (42) expression -> . expression LESS expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESSEQ expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . BOOLEAN
    (56) expression -> . ID
    (57) expression -> . LBRACKET list_elements RBRACKET
    (18) lvalue -> . ID
    (19) lvalue -> . expression LBRACKET expression RBRACKET

    PRINT           shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    FUNC            shift and go to state 19
    RETURN          shift and go to state 21
    INPUT           shift and go to state 22
    ID              shift and go to state 20
    NOT             shift and go to state 24
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    LBRACKET        shift and go to state 28

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    print_statement                shift and go to state 4
    assign_statement               shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    function_definition            shift and go to state 9
    return_statement               shift and go to state 10
    input_statement                shift and go to state 11
    expression                     shift and go to state 12
    lvalue                         shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . print_statement
    (5) statement -> . assign_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . function_definition
    (10) statement -> . return_statement
    (11) statement -> . input_statement
    (12) statement -> . expression SEMICOLON
    (14) print_statement -> . PRINT LPAREN print_arguments RPAREN SEMICOLON
    (17) assign_statement -> . lvalue EQUALS expression SEMICOLON
    (22) if_statement -> . IF LPAREN expression RPAREN block
    (23) if_statement -> . IF LPAREN expression RPAREN block ELSE block
    (24) while_statement -> . WHILE LPAREN expression RPAREN block
    (25) for_statement -> . FOR LPAREN assign_statement expression SEMICOLON assign_statement RPAREN block
    (26) function_definition -> . FUNC ID LPAREN parameters RPAREN block
    (32) return_statement -> . RETURN expression SEMICOLON
    (13) input_statement -> . INPUT LPAREN lvalue RPAREN SEMICOLON
    (27) expression -> . ID LPAREN argument_list RPAREN
    (33) expression -> . expression DOT INSERT LPAREN expression RPAREN
    (34) expression -> . expression DOT EXPLODE LPAREN expression RPAREN
    (35) expression -> . expression DOT SIZE LPAREN RPAREN
    (36) expression -> . expression DOT GET LPAREN expression RPAREN
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULT expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MODULE expression
    (42) expression -> . expression LESS expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESSEQ expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . BOOLEAN
    (56) expression -> . ID
    (57) expression -> . LBRACKET list_elements RBRACKET
    (18) lvalue -> . ID
    (19) lvalue -> . expression LBRACKET expression RBRACKET

    $end            reduce using rule 1 (program -> statement_list .)
    PRINT           shift and go to state 13
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    FUNC            shift and go to state 19
    RETURN          shift and go to state 21
    INPUT           shift and go to state 22
    ID              shift and go to state 20
    NOT             shift and go to state 24
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    LBRACKET        shift and go to state 28

    statement                      shift and go to state 29
    print_statement                shift and go to state 4
    assign_statement               shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    function_definition            shift and go to state 9
    return_statement               shift and go to state 10
    input_statement                shift and go to state 11
    expression                     shift and go to state 12
    lvalue                         shift and go to state 15

state 3

    (3) statement_list -> statement .

    PRINT           reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    FUNC            reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    INPUT           reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    BOOLEAN         reduce using rule 3 (statement_list -> statement .)
    LBRACKET        reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RKEY            reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> print_statement .

    PRINT           reduce using rule 4 (statement -> print_statement .)
    IF              reduce using rule 4 (statement -> print_statement .)
    WHILE           reduce using rule 4 (statement -> print_statement .)
    FOR             reduce using rule 4 (statement -> print_statement .)
    FUNC            reduce using rule 4 (statement -> print_statement .)
    RETURN          reduce using rule 4 (statement -> print_statement .)
    INPUT           reduce using rule 4 (statement -> print_statement .)
    ID              reduce using rule 4 (statement -> print_statement .)
    NOT             reduce using rule 4 (statement -> print_statement .)
    MINUS           reduce using rule 4 (statement -> print_statement .)
    LPAREN          reduce using rule 4 (statement -> print_statement .)
    NUMBER          reduce using rule 4 (statement -> print_statement .)
    STRING          reduce using rule 4 (statement -> print_statement .)
    BOOLEAN         reduce using rule 4 (statement -> print_statement .)
    LBRACKET        reduce using rule 4 (statement -> print_statement .)
    $end            reduce using rule 4 (statement -> print_statement .)
    RKEY            reduce using rule 4 (statement -> print_statement .)


state 5

    (5) statement -> assign_statement .

    PRINT           reduce using rule 5 (statement -> assign_statement .)
    IF              reduce using rule 5 (statement -> assign_statement .)
    WHILE           reduce using rule 5 (statement -> assign_statement .)
    FOR             reduce using rule 5 (statement -> assign_statement .)
    FUNC            reduce using rule 5 (statement -> assign_statement .)
    RETURN          reduce using rule 5 (statement -> assign_statement .)
    INPUT           reduce using rule 5 (statement -> assign_statement .)
    ID              reduce using rule 5 (statement -> assign_statement .)
    NOT             reduce using rule 5 (statement -> assign_statement .)
    MINUS           reduce using rule 5 (statement -> assign_statement .)
    LPAREN          reduce using rule 5 (statement -> assign_statement .)
    NUMBER          reduce using rule 5 (statement -> assign_statement .)
    STRING          reduce using rule 5 (statement -> assign_statement .)
    BOOLEAN         reduce using rule 5 (statement -> assign_statement .)
    LBRACKET        reduce using rule 5 (statement -> assign_statement .)
    $end            reduce using rule 5 (statement -> assign_statement .)
    RKEY            reduce using rule 5 (statement -> assign_statement .)


state 6

    (6) statement -> if_statement .

    PRINT           reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    FUNC            reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    INPUT           reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    MINUS           reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    NUMBER          reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    BOOLEAN         reduce using rule 6 (statement -> if_statement .)
    LBRACKET        reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RKEY            reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    PRINT           reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    FOR             reduce using rule 7 (statement -> while_statement .)
    FUNC            reduce using rule 7 (statement -> while_statement .)
    RETURN          reduce using rule 7 (statement -> while_statement .)
    INPUT           reduce using rule 7 (statement -> while_statement .)
    ID              reduce using rule 7 (statement -> while_statement .)
    NOT             reduce using rule 7 (statement -> while_statement .)
    MINUS           reduce using rule 7 (statement -> while_statement .)
    LPAREN          reduce using rule 7 (statement -> while_statement .)
    NUMBER          reduce using rule 7 (statement -> while_statement .)
    STRING          reduce using rule 7 (statement -> while_statement .)
    BOOLEAN         reduce using rule 7 (statement -> while_statement .)
    LBRACKET        reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RKEY            reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> for_statement .

    PRINT           reduce using rule 8 (statement -> for_statement .)
    IF              reduce using rule 8 (statement -> for_statement .)
    WHILE           reduce using rule 8 (statement -> for_statement .)
    FOR             reduce using rule 8 (statement -> for_statement .)
    FUNC            reduce using rule 8 (statement -> for_statement .)
    RETURN          reduce using rule 8 (statement -> for_statement .)
    INPUT           reduce using rule 8 (statement -> for_statement .)
    ID              reduce using rule 8 (statement -> for_statement .)
    NOT             reduce using rule 8 (statement -> for_statement .)
    MINUS           reduce using rule 8 (statement -> for_statement .)
    LPAREN          reduce using rule 8 (statement -> for_statement .)
    NUMBER          reduce using rule 8 (statement -> for_statement .)
    STRING          reduce using rule 8 (statement -> for_statement .)
    BOOLEAN         reduce using rule 8 (statement -> for_statement .)
    LBRACKET        reduce using rule 8 (statement -> for_statement .)
    $end            reduce using rule 8 (statement -> for_statement .)
    RKEY            reduce using rule 8 (statement -> for_statement .)


state 9

    (9) statement -> function_definition .

    PRINT           reduce using rule 9 (statement -> function_definition .)
    IF              reduce using rule 9 (statement -> function_definition .)
    WHILE           reduce using rule 9 (statement -> function_definition .)
    FOR             reduce using rule 9 (statement -> function_definition .)
    FUNC            reduce using rule 9 (statement -> function_definition .)
    RETURN          reduce using rule 9 (statement -> function_definition .)
    INPUT           reduce using rule 9 (statement -> function_definition .)
    ID              reduce using rule 9 (statement -> function_definition .)
    NOT             reduce using rule 9 (statement -> function_definition .)
    MINUS           reduce using rule 9 (statement -> function_definition .)
    LPAREN          reduce using rule 9 (statement -> function_definition .)
    NUMBER          reduce using rule 9 (statement -> function_definition .)
    STRING          reduce using rule 9 (statement -> function_definition .)
    BOOLEAN         reduce using rule 9 (statement -> function_definition .)
    LBRACKET        reduce using rule 9 (statement -> function_definition .)
    $end            reduce using rule 9 (statement -> function_definition .)
    RKEY            reduce using rule 9 (statement -> function_definition .)


state 10

    (10) statement -> return_statement .

    PRINT           reduce using rule 10 (statement -> return_statement .)
    IF              reduce using rule 10 (statement -> return_statement .)
    WHILE           reduce using rule 10 (statement -> return_statement .)
    FOR             reduce using rule 10 (statement -> return_statement .)
    FUNC            reduce using rule 10 (statement -> return_statement .)
    RETURN          reduce using rule 10 (statement -> return_statement .)
    INPUT           reduce using rule 10 (statement -> return_statement .)
    ID              reduce using rule 10 (statement -> return_statement .)
    NOT             reduce using rule 10 (statement -> return_statement .)
    MINUS           reduce using rule 10 (statement -> return_statement .)
    LPAREN          reduce using rule 10 (statement -> return_statement .)
    NUMBER          reduce using rule 10 (statement -> return_statement .)
    STRING          reduce using rule 10 (statement -> return_statement .)
    BOOLEAN         reduce using rule 10 (statement -> return_statement .)
    LBRACKET        reduce using rule 10 (statement -> return_statement .)
    $end            reduce using rule 10 (statement -> return_statement .)
    RKEY            reduce using rule 10 (statement -> return_statement .)


state 11

    (11) statement -> input_statement .

    PRINT           reduce using rule 11 (statement -> input_statement .)
    IF              reduce using rule 11 (statement -> input_statement .)
    WHILE           reduce using rule 11 (statement -> input_statement .)
    FOR             reduce using rule 11 (statement -> input_statement .)
    FUNC            reduce using rule 11 (statement -> input_statement .)
    RETURN          reduce using rule 11 (statement -> input_statement .)
    INPUT           reduce using rule 11 (statement -> input_statement .)
    ID              reduce using rule 11 (statement -> input_statement .)
    NOT             reduce using rule 11 (statement -> input_statement .)
    MINUS           reduce using rule 11 (statement -> input_statement .)
    LPAREN          reduce using rule 11 (statement -> input_statement .)
    NUMBER          reduce using rule 11 (statement -> input_statement .)
    STRING          reduce using rule 11 (statement -> input_statement .)
    BOOLEAN         reduce using rule 11 (statement -> input_statement .)
    LBRACKET        reduce using rule 11 (statement -> input_statement .)
    $end            reduce using rule 11 (statement -> input_statement .)
    RKEY            reduce using rule 11 (statement -> input_statement .)


state 12

    (12) statement -> expression . SEMICOLON
    (33) expression -> expression . DOT INSERT LPAREN expression RPAREN
    (34) expression -> expression . DOT EXPLODE LPAREN expression RPAREN
    (35) expression -> expression . DOT SIZE LPAREN RPAREN
    (36) expression -> expression . DOT GET LPAREN expression RPAREN
    (37) expression -> expression . PLUS expression
    (38) expression -> expression . MINUS expression
    (39) expression -> expression . MULT expression
    (40) expression -> expression . DIVIDE expression
    (41) expression -> expression . MODULE expression
    (42) expression -> expression . LESS expression
    (43) expression -> expression . GREATER expression
    (44) expression -> expression . LESSEQ expression
    (45) expression -> expression . GREATEREQ expression
    (46) expression -> expression . EQ expression
    (47) expression -> expression . NEQ expression
    (48) expression -> expression . AND expression
    (49) expression -> expression . OR expression
    (19) lvalue -> expression . LBRACKET expression RBRACKET

    SEMICOLON       shift and go to state 30
    DOT             shift and go to state 31
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    MULT            shift and go to state 34
    DIVIDE          shift and go to state 35
    MODULE          shift and go to state 36
    LESS            shift and go to state 37
    GREATER         shift and go to state 38
    LESSEQ          shift and go to state 39
    GREATEREQ       shift and go to state 40
    EQ              shift and go to state 41
    NEQ             shift and go to state 42
    AND             shift and go to state 43
    OR              shift and go to state 44
    LBRACKET        shift and go to state 45


state 13

    (14) print_statement -> PRINT . LPAREN print_arguments RPAREN SEMICOLON

    LPAREN          shift and go to state 46


state 14

    (52) expression -> LPAREN . expression RPAREN
    (27) expression -> . ID LPAREN argument_list RPAREN
    (33) expression -> . expression DOT INSERT LPAREN expression RPAREN
    (34) expression -> . expression DOT EXPLODE LPAREN expression RPAREN
    (35) expression -> . expression DOT SIZE LPAREN RPAREN
    (36) expression -> . expression DOT GET LPAREN expression RPAREN
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULT expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MODULE expression
    (42) expression -> . expression LESS expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESSEQ expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . BOOLEAN
    (56) expression -> . ID
    (57) expression -> . LBRACKET list_elements RBRACKET

    ID              shift and go to state 48
    NOT             shift and go to state 24
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    LBRACKET        shift and go to state 28

    expression                     shift and go to state 47

state 15

    (17) assign_statement -> lvalue . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 49


state 16

    (22) if_statement -> IF . LPAREN expression RPAREN block
    (23) if_statement -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 50


state 17

    (24) while_statement -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 51


state 18

    (25) for_statement -> FOR . LPAREN assign_statement expression SEMICOLON assign_statement RPAREN block

    LPAREN          shift and go to state 52


state 19

    (26) function_definition -> FUNC . ID LPAREN parameters RPAREN block

    ID              shift and go to state 53


state 20

    (27) expression -> ID . LPAREN argument_list RPAREN
    (56) expression -> ID .
    (18) lvalue -> ID .

    LPAREN          shift and go to state 54
    SEMICOLON       reduce using rule 56 (expression -> ID .)
    DOT             reduce using rule 56 (expression -> ID .)
    PLUS            reduce using rule 56 (expression -> ID .)
    MINUS           reduce using rule 56 (expression -> ID .)
    MULT            reduce using rule 56 (expression -> ID .)
    DIVIDE          reduce using rule 56 (expression -> ID .)
    MODULE          reduce using rule 56 (expression -> ID .)
    LESS            reduce using rule 56 (expression -> ID .)
    GREATER         reduce using rule 56 (expression -> ID .)
    LESSEQ          reduce using rule 56 (expression -> ID .)
    GREATEREQ       reduce using rule 56 (expression -> ID .)
    EQ              reduce using rule 56 (expression -> ID .)
    NEQ             reduce using rule 56 (expression -> ID .)
    AND             reduce using rule 56 (expression -> ID .)
    OR              reduce using rule 56 (expression -> ID .)
    LBRACKET        reduce using rule 56 (expression -> ID .)
    EQUALS          reduce using rule 18 (lvalue -> ID .)


state 21

    (32) return_statement -> RETURN . expression SEMICOLON
    (27) expression -> . ID LPAREN argument_list RPAREN
    (33) expression -> . expression DOT INSERT LPAREN expression RPAREN
    (34) expression -> . expression DOT EXPLODE LPAREN expression RPAREN
    (35) expression -> . expression DOT SIZE LPAREN RPAREN
    (36) expression -> . expression DOT GET LPAREN expression RPAREN
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULT expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MODULE expression
    (42) expression -> . expression LESS expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESSEQ expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . BOOLEAN
    (56) expression -> . ID
    (57) expression -> . LBRACKET list_elements RBRACKET

    ID              shift and go to state 48
    NOT             shift and go to state 24
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    LBRACKET        shift and go to state 28

    expression                     shift and go to state 55

state 22

    (13) input_statement -> INPUT . LPAREN lvalue RPAREN SEMICOLON

    LPAREN          shift and go to state 56


state 23

    (51) expression -> MINUS . expression
    (27) expression -> . ID LPAREN argument_list RPAREN
    (33) expression -> . expression DOT INSERT LPAREN expression RPAREN
    (34) expression -> . expression DOT EXPLODE LPAREN expression RPAREN
    (35) expression -> . expression DOT SIZE LPAREN RPAREN
    (36) expression -> . expression DOT GET LPAREN expression RPAREN
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULT expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MODULE expression
    (42) expression -> . expression LESS expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESSEQ expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . BOOLEAN
    (56) expression -> . ID
    (57) expression -> . LBRACKET list_elements RBRACKET

    ID              shift and go to state 48
    NOT             shift and go to state 24
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    LBRACKET        shift and go to state 28

    expression                     shift and go to state 57

state 24

    (50) expression -> NOT . expression
    (27) expression -> . ID LPAREN argument_list RPAREN
    (33) expression -> . expression DOT INSERT LPAREN expression RPAREN
    (34) expression -> . expression DOT EXPLODE LPAREN expression RPAREN
    (35) expression -> . expression DOT SIZE LPAREN RPAREN
    (36) expression -> . expression DOT GET LPAREN expression RPAREN
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (39) expression -> . expression MULT expression
    (40) expression -> . expression DIVIDE expression
    (41) expression -> . expression MODULE expression
    (42) expression -> . expression LESS expression
    (43) expression -> . expression GREATER expression
    (44) expression -> . expression LESSEQ expression
    (45) expression -> . expression GREATEREQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression NEQ expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . MINUS expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . BOOLEAN
    (56) expression -> . ID
    (57) expression -> . LBRACKET list_elements RBRACKET

    ID              shift and go to state 48
    NOT             shift and go to state 24
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    LBRACKET        shift and go to state 28

    expression                     shift and go to state 58

state 25

    (53) expression -> NUMBER .

    SEMICOLON       reduce using rule 53 (expression -> NUMBER .)
    DOT             reduce using rule 53 (expression -> NUMBER .)
    PLUS            reduce using rule 53 (expression -> NUMBER .)
    MINUS           reduce using rule 53 (expression -> NUMBER .)
    MULT            reduce using rule 53 (expression -> NUMBER .)
    DIVIDE          reduce using rule 53 (expression -> NUMBER .)
    MODULE          reduce using rule 53 (expression -> NUMBER .)
    LESS            reduce using rule 53 (expression -> NUMBER .)
    GREATER         reduce using rule 53 (expression -> NUMBER .)
    LESSEQ          reduce using rule 53 (expression -> NUMBER .)
    GREATEREQ       reduce using rule 53 (expression -> NUMBER .)
    EQ              reduce using rule 53 (expression -> NUMBER .)
    NEQ             reduce using rule 53 (expression -> NUMBER .)
    AND             reduce using rule 53 (expression -> NUMBER .)
    OR              reduce using rule 53 (expression -> NUMBER .)
    LBRACKET        reduce using rule 53 (expression -> NUMBER .)
    RPAREN          reduce using rule 53 (expression -> NUMBER .)
    RBRACKET        reduce using rule 53 (expression -> NUMBER .)
    COMMA           reduce using rule 53 (expression -> NUMBER .)


state 26

    (54) expression -> STRING .

    SEMICOLON       reduce using rule 54 (expression -> STRING .)
    DOT             reduce using rule 54 (expression -> STRING .)
    PLUS            reduce using rule 54 (expression -> STRING .)
    MINUS           reduce using rule 54 (expression -> STRING .)
    MULT            reduce using rule 54 (expression -> STRING .)
    DIVIDE          reduce using rule 54 (expression -> STRING .)
    MODULE          reduce using rule 54 (expression -> STRING .)
    LESS            reduce using rule 54 (expression -> STRING .)
    GREATER         reduce using rule 54 (expression -> STRING .)
    LESSEQ          reduce using rule 54 (expression -> STRING .)
    GREATEREQ       reduce using rule 54 (expression -> STRING .)
    EQ              reduce using rule 54 (expression -> STRING .)
    NEQ             reduce using rule 54 (expression -> STRING .)
    AND             reduce using rule 54 (expression -> STRING .)
    OR              reduce using rule 54 (expression -> STRING .)
    LBRACKET        reduce using rule 54 (expression -> STRING .)
